--- a/src/jquery.vangogh.css
+++ b/src/jquery.vangogh.css
@@ -1,37 +1,34 @@
+/* here thy artist beginst hast work */
 .vg-container {
     position: relative;
     overflow: auto;
 }
-
+ 
 .vg-container,
 .vg-code {
     border: 0;
     margin: 0;
 }
-
+ 
 .vg-container .vg-line,
 .vg-container .vg-number {
     display: block;
     height: 1.5em;
     line-height: 1.5em !important;
 }
-
-.vg-line.vg-highlight {
-    background-color: #ffc;
-}
-
-.vg-line span.vg-highlight {
-    color: blue;
-    font-weight: bold;
-    text-decoration: underline;
-}
-
+ 
 .vg-gutter {
     float: left;
     min-width: 20px;
     width: auto;
+    -o-user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
-
+ 
 .vg-number {
     cursor: pointer;
 }
