--- a/src/styles/github.css
+++ b/src/styles/github.css
@@ -2,12 +2,13 @@
 github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 extended and modified for vangogh by Marcus Ekwall <marcus@writeless.se>
 */
+ 
 .vg-container {
     font-family: 'Bitstream Vera Sans Mono', 'Courier New', monospace;
     font-size: 12px;
     border: 1px solid #ddd;
 }
-
+ 
 .vg-gutter {
     background-color: #ececec;
     border-right: 1px solid #ddd;
@@ -17,19 +18,32 @@ extended and modified for vangogh by Marcus Ekwall <marcus@writeless.se>
     margin-right: .5em;
 }
 
+.vg-code *::-moz-selection,
+.vg-code *::-webkit-selection,
+.vg-code *::selection,
+.vg-line.vg-highlight {
+    background-color: #ffc;
+}
+ 
+.vg-line span.vg-highlight {
+    color: blue;
+    font-weight: bold;
+    text-decoration: underline;
+}
+ 
 .vg-container .vg-code {
     display: block;
     padding: 1em .5em;
     background: #fff;
 }
-
+ 
 .vg-code {
     color: #000;
     background: #f8f8ff;
     border: 0;
     padding: .4em;
 }
-
+ 
 .vg-code .comment,
 .vg-code .template_comment,
 .vg-code .diff .header,
@@ -37,7 +51,7 @@ extended and modified for vangogh by Marcus Ekwall <marcus@writeless.se>
     color: #998;
     font-style: italic
 }
-
+ 
 .vg-code .keyword,
 .vg-code .css .rule .keyword,
 .vg-code .winutils,
@@ -47,38 +61,38 @@ extended and modified for vangogh by Marcus Ekwall <marcus@writeless.se>
     color: #000;
     font-weight: bold
 }
-
+ 
 .vg-code .number,
 .vg-code .hexcolor {
     color: #40a070
 }
-
+ 
 .vg-code .string,
 .vg-code .tag .value,
 .vg-code .phpdoc,
 .vg-code .tex .formula {
     color: #d14
 }
-
+ 
 .vg-code .title,
 .vg-code .id {
     color: #900;
     font-weight: bold
 }
-
+ 
 .vg-code .javascript .title,
 .vg-code .lisp .title,
 .vg-code .subst {
     font-weight: normal
 }
-
+ 
 .vg-code .class .title,
 .vg-code .haskell .label,
 .vg-code .tex .command {
     color: #458;
     font-weight: bold
 }
-
+ 
 .vg-code .tag,
 .vg-code .tag .title,
 .vg-code .rules .property,
@@ -86,24 +100,24 @@ extended and modified for vangogh by Marcus Ekwall <marcus@writeless.se>
     color: #000080;
     font-weight: normal
 }
-
+ 
 .vg-code .attribute,
 .vg-code .variable,
 .vg-code .instancevar,
 .vg-code .lisp .body {
     color: #008080
 }
-
-
+ 
+ 
 .vg-code .regexp {
     color: #009926
 }
-
+ 
 .vg-code .class {
     color: #458;
     font-weight: bold
 }
-
+ 
 .vg-code .symbol,
 .vg-code .ruby .symbol .string,
 .vg-code .ruby .symbol .keyword,
@@ -113,13 +127,13 @@ extended and modified for vangogh by Marcus Ekwall <marcus@writeless.se>
 .vg-code .input_number {
     color: #990073
 }
-
+ 
 .vg-code .builtin,
 .vg-code .built_in,
 .vg-code .lisp .title {
     color: #0086b3
 }
-
+ 
 .vg-code .codeprocessor,
 .vg-code .pi,
 .vg-code .doctype,
@@ -128,23 +142,23 @@ extended and modified for vangogh by Marcus Ekwall <marcus@writeless.se>
     color: #999;
     font-weight: bold
 }
-
+ 
 .vg-code .deletion {
     background: #fdd
 }
-
+ 
 .vg-code .addition {
     background: #dfd
 }
-
+ 
 .vg-code .diff .change {
     background: #0086b3
 }
-
+ 
 .vg-code .chunk {
     color: #aaa
 }
-
+ 
 .vg-code .tex .formula {
     opacity: 0.5;
 }
