--- a/src/styles/github.css
+++ b/src/styles/github.css
@@ -1,6 +1,6 @@
 /*
-github.com style (c) Vasily Polovnyov <vast@whiteants.net>
-extended and modified for vangogh by Marcus Ekwall <marcus@writeless.se>
+obsidian style (c) Vasily Polovnyov <vast@whiteants.net>
+extended and modified for vanGogh by Marcus Ekwall <marcus@writeless.se>
 */
  
 .vg-container {
@@ -8,7 +8,8 @@ extended and modified for vangogh by Marcus Ekwall <marcus@writeless.se>
     font-size: 12px;
     border: 1px solid #ddd;
 }
- 
+
+
 .vg-gutter {
     background-color: #ececec;
     border-right: 1px solid #ddd;
@@ -34,7 +35,7 @@ extended and modified for vangogh by Marcus Ekwall <marcus@writeless.se>
 .vg-container .vg-code {
     display: block;
     padding: 1em .5em;
-    background: #fff;
+	background-color: #fff;
 }
  
 .vg-code {
