--- a/master/src/styles/github.css
+++ b/master/src/styles/github.css
@@ -2,7 +2,7 @@
 obsidian style (c) Vasily Polovnyov <vast@whiteants.net>
 extended and modified for vanGogh by Marcus Ekwall <marcus@writeless.se>
 */
- 
+
 .vg-container {
     font-family: 'Bitstream Vera Sans Mono', 'Courier New', monospace;
     font-size: 12px;
@@ -24,7 +24,10 @@ extended and modified for vanGogh by Marcus Ekwall <marcus@writeless.se>
 
 .vg-code *::-moz-selection,
 .vg-code *::-webkit-selection,
-.vg-code *::selection,
+.vg-code *::selection {
+    background-color: #ffc;
+}
+
 .vg-line.vg-highlight {
     background-color: #ffc;
 }
